--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
 	font-size:1em;
 	background-color: #282323;
 	color:#E5E5E5;
+	overflow:hidden;
 }
 h1{
 	margin:0px;
@@ -29,14 +30,28 @@ h2{
 	font-weight:normal;
 	color:#9D9797;
 }
+
+.roundPane a{
+	color:#9D9797;
+}
+.roundPane a:hover{
+	color:#E3C197;
+}
+#content{
+	padding:2%;
+	padding-top:4%
+}
 .roundPane{
 	background-color: #3A3535 !important;
 	border-radius: 18px;
 	color:#9D9797;
 	padding:5% !important;
-	margin:11% !important;
+	margin:2% !important;
 	text-align:center;
+	width:70%;
+	height:auto;
 	position:relative;
+	margin-top:3%
 }
 
 .closeBtn{
@@ -53,7 +68,7 @@ h2{
 	padding:2%;
 }
 
-#getAccessKeys input[type="text"]{
+input[type="text"]{
 	width:46%;
 	padding:2%;
 	text-align: center;
@@ -69,7 +84,7 @@ h2{
 	background-repeat: no-repeat;
 }
 
-#getAccessKeys input[type="button"]{
+input[type="button"]{
 	width:33%;
 	padding:2%;
 	text-align: center;
@@ -80,9 +95,7 @@ h2{
 	color:#E5E5E5;
 }
 
-#content{
-	padding:2%;
-}
+
 #output{
 	width:70%;
 }
@@ -100,6 +113,7 @@ h2{
 	float:right;
 	font-size:1.15em;
 	font-weight:normal;
+	position:relative;
 }
 
 
