--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+html
+{
+	height:100%;
+}
 body{
 	margin:0px;
 	padding:0px;
@@ -6,6 +10,7 @@ body{
 	background-color: #282323;
 	color:#E5E5E5;
 	overflow:hidden;
+	height:100%;
 }
 h1{
 	margin:0px;
@@ -46,7 +51,7 @@ h2{
 	border-radius: 18px;
 	color:#9D9797;
 	padding:5% !important;
-	margin:2% !important;
+	margin:9% !important;
 	text-align:center;
 	width:70%;
 	height:auto;
@@ -116,7 +121,10 @@ input[type="button"]{
 	position:relative;
 }
 
-
+#wrapper
+{
+	height:100%;
+}
 #right_tool{
 	float:right;
 	padding:1%;
@@ -125,5 +133,81 @@ input[type="button"]{
 	background-color:#414242;
 }
 
+#sidePanel
+{
+	height:100%;
+	float:left;
+	background-color:#161010;
+	width:15%;
+	position:relative;
+}
 
+ul
+{
+	list-style:none;
+}
+li
+{
+	padding:0.5em;
+}
 
+.contentPanel
+{
+	position:fixed;
+	margin-left:17%;
+	margin-top:5%;
+
+	background-color: #5E5151;
+	border-radius:8px;
+	width:65%;
+}
+
+.contentPanel h1
+{
+	background-color: #1C1818;	
+	margin:0%;
+	padding:3%;
+}
+
+.contentPanel p
+{
+	padding:3%;
+}
+
+.tab_panel
+{
+    border: 1px solid;
+    border-color: #DFDFDF;
+    border-radius:6px;
+    margin-top:3%;
+    display:inline-block;
+    width:100%;
+}
+.tab_panel ul
+{
+    list-style: none;
+    padding:0%;
+    margin:0%;
+    font-size:1.05em;
+    width:100%;
+}
+.tab_panel li
+{
+    float:left;
+    padding:0.7em;
+    margin:0.5%;
+    border-radius:0.3em;
+}
+.tab_panel li:hover
+{
+    background-color:#DBE5E9;
+
+}
+.tab_panel a
+{
+    color:black;
+}
+.active li
+{
+    background-color:#F0F2F3;
+}
